--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
 
-<div class="texto-info">@ViewData["Title"]</div>
+<div style="font-size: 20px; margin-bottom: 20px;">@ViewData["Title"]</div>
 
 <div class="perfil-alerta" role="alert">
     <strong>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String39")</strong>
