--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -6,9 +6,9 @@
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
 
-<div class="texto-info">@ViewData["Title"]</div>
+<div style="font-size: 20px; margin-bottom: 20px;">@ViewData["Title"]</div>
 
-<div class="row perfil-espacio-adicional">
+<div>
     <p>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String34")</p>
     <p>
         <strong>@Herramientas.Idiomas.CogerCadena(Model.idioma, "Settings.String35")</strong>
