--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Notifications.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Notifications.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Areas/Identity/Pages/Account/Manage/_PerfilLayout.cshtml";
 }
 
-<div class="texto-info">@ViewData["Title"]</div>
+<div style="font-size: 20px; margin-bottom: 20px;">@ViewData["Title"]</div>
 
 @(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.NotificacionesCorreo>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
 
