--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -1,4 +1,11 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
+﻿@using APIs.Steam
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Identity;
+@using pepeizqs_deals_web.Areas.Identity.Data;
+
+@inject UserManager<Usuario> UserManager
+@inject SignInManager<Usuario> SignInManager
+@inject IHttpContextAccessor HttpContextAccessor
 
 @if (gratisActuales.Count > 0)
 {
@@ -15,23 +22,37 @@
 				<img src="@gratisActual.Tipo.ImagenLogo" />
 			</div>
 
-			<div class="perfil" style="width: 80%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
+			<div class="perfil" style="width: 80%; padding: 30px 40px;">
 				@foreach (var juego in gratisActual.Juegos)
 				{
-					<div>
-						<a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 10px; max-width: 180px;" target="_blank">
-							<div>
-								<img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
+					<a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 0px; margin-top: 10px; margin-bottom: 10px;" target="_blank">
+						<div style="display: flex; align-items: center;">
+							<div style="width: 25%;">
+								<img src="@SacarImagen(juego.JuegoId)" style="max-width: 100%; max-height: 100%;" />
 							</div>
 
-							@if (gratisActual.Tipo.DRMEnseñar == true)
-							{
-								<div style="text-align: right; margin-top: 10px; height: 30px;">
-									<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 30px; max-height: 30px;" />
+							<div style="width: 75%; margin-left: 20px;">
+								<span>@juego.Nombre</span>
+
+								<div style="display: flex; align-items: center; margin-top: 10px;">
+									@if (gratisActual.Tipo.DRMEnseñar == true)
+									{
+										<div style="height: 20px; margin-right: 10px;">
+											<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 20px; max-height: 20px;" />
+										</div>
+									}
+
+									@if (usuario != null)
+									{
+										<div>
+											@ComprobarUsuarioJuego(juego.JuegoId.ToString()).ToString()
+										</div>
+									}
 								</div>
-							}
-						</a>
-					</div>
+
+							</div>
+						</div>					
+					</a>
 				}
 			</div>
 		</div>
@@ -87,8 +108,45 @@
 	List<Gratis2.GratisComponente> gratisActuales = new List<Gratis2.GratisComponente>();
 	List<Gratis2.GratisComponente> gratisPasados = new List<Gratis2.GratisComponente>();
 
+	private Usuario usuario = new Usuario();
+	private List<string> juegosUsuario = new List<string>();
+
 	protected override async Task OnInitializedAsync()
 	{
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+
+		if (usuario != null)
+		{
+			if (usuario.SteamGames != null)
+			{
+				bool tiempo = true;
+
+				if (usuario.SteamAccountLastCheck != null)
+				{
+					if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(7) > DateTime.Now)
+					{
+						tiempo = false;
+					}
+				}
+
+				if (tiempo == true)
+				{
+					SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+
+					usuario.SteamGames = datos.Juegos;
+					usuario.SteamWishlist = datos.Deseados;
+					usuario.Avatar = datos.Avatar;
+					usuario.Nickname = datos.Nombre;
+					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
+					usuario.OfficialGroup = datos.GrupoOficial;
+
+					await UserManager.UpdateAsync(usuario);
+				}
+			}
+
+			juegosUsuario =	Herramientas.Listados.Generar(usuario.SteamGames);
+		}
+
 		List<Juegos.JuegoGratis> juegosTodos = BaseDatos.Gratis.Buscar.Todos();
 
 		if (juegosTodos.Count > 0)
@@ -173,5 +231,31 @@
 				}
 			}
 		}
+	}
+
+	private string SacarImagen(int id)
+	{
+		return BaseDatos.Juegos.Buscar.UnJuego(id.ToString()).Imagenes.Header_460x215;
+	}
+
+	private bool ComprobarUsuarioJuego(string id)
+	{
+		if (usuario != null)
+		{
+			if (juegosUsuario.Count > 0)
+			{
+				string steamID = BaseDatos.Juegos.Buscar.UnJuego(id.ToString()).IdSteam.ToString();
+
+				foreach (var juego in juegosUsuario)
+				{
+					if (juego == steamID)
+					{
+						return true;
+					}
+				}
+			}
+		}
+
+		return false;
 	}
 }
