--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -16,6 +16,8 @@
     --colorTextoOscuro: #86aeef;
     --colorTextoAlerta: #664d03;
     --fondoAlerta: #fff3cd;
+    --colorTextoBien: #011a11;
+    --fondoBien: #057c4f;
 }
 
 @font-face {
