--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -24,7 +24,7 @@
 					</div>
 
 					<div>
-						<input @oninput="TextoCambia" class="entrada-texto" style="margin: 10px 0px;" value="@idsPendiente" />
+						<textarea @oninput="TextoCambia" class="entrada-texto" style="margin: 10px 0px;" value="@idsPendiente" rows="1" />
 					</div>
 
 					<div style="display: flex; align-items: center; margin: 20px 0px;">
